# LuX

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mazesolve.cpp  mazesolve.h  slots.cpp  slots.h  startwindow.cpp  startwindow.h  startwindow.ui
.github/workflows/: c-cpp-build-linux.yaml  c-cpp-build-windows.yaml
include/: mainwindow.h  mazesolve.h
src/main/: mazesolve.cpp
src/ui/: mainwindow.cpp  mainwindow.ui  startwindow.cpp  startwindow.ui
